<resources>
    <string name="app_name">Microfina Caisse Mobile</string>
    <string name="action_settings">Parametres</string>
    <string name="title_activity_connexion">Connexion</string>
    <string name="login">Login</string>
    <string name="effacer">Annuler</string>
    <string name="valid">Valider</string>
    <string name="password">Mot de passe</string>
    <string name="title_activity_config">Configuration</string>
    <string name="caissier">Caissier</string>
    <string name="agence">Agence</string>
    <string name="connexion">Connexion</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clikagain">Appuyer encore pour quitter</string>
    <string name="title_activity_agence">Agence</string>
    <string name="title_activity_agence_form">Formulaire Agence</string>
    <string name="title_activity_caissier">Caissier</string>
    <string name="title_activity_caissier_form">Formulaire Caissier</string>
    <string name="numagence">Numero</string>
    <string name="nom">Nom</string>
    <string name="compteliaison">Compte de liaison</string>
    <string name="numsms">Numero sms</string>
    <string name="ipdb">Ip serveur</string>
    <string name="confirm">Confirmation</string>
    <string name="nombd">base de donnée</string>
    <string name="numero">Numero</string>
    <string name="nomprenom"><![CDATA[Nom & prenom]]></string>
    <string name="codeguichet">Code guichet</string>
    <string name="depot">Dépot</string>
    <string name="retrait">Retrait</string>
    <string name="nocompte">No Compte :</string>
    <string name="client">Intitulé : </string>
    <string name="montant">Montant</string>
    <string name="solde">Solde :</string>
    <string name="operation">Operations</string>
    <string name="help">Aide</string>
    <string name="param">Paramétrages</string>
    <string name="menu_propos">A propos</string>
    <string name="title_activity_parametre">Parametre</string>
    <string name="title_activity_apropos">Apropos</string>
    <string name="title_activity_operation">Opération</string>
    <string name="anyconnexion">Aucune connexion</string>
    <string name="dataerror">Données incorrectes</string>
    <string name="addsucess">Ajout avec success</string>
    <string name="adderror">Echec d\'enregistrement</string>
    <string name="annuler">Annuler</string>
    <string name="suprimer">Supprimer</string>
    <string name="deletequestion">Etes-vous sure de supprimer?</string>
    <string name="deleteok">Supression réussie</string>
    <string name="title_activity_connexion_settings">Parametres Connexion</string>
    <string name="generale">Générale</string>
    <string name="iptitle">Ip du Serveur</string>
    <string name="ipsum">Ip du serveur</string>
    <string name="etablissement">Agence</string>
    <string name="etssum">Nom de l\'agence</string>
    <string name="adress">Adresse</string>
    <string name="etsaddress">Adresse de l\'agence</string>
    <string name="lastmsg">Message final</string>
    <string name="msgbottomticket">Message en bas des ticket de vente</string>
    <string name="imp">IMPRIMANTE</string>
    <string name="impconfig">Imprimente Configuration</string>
    <string name="impext">Imprimente externe</string>
    <string name="impint">Imprimente interne</string>
    <string name="title_activity_connexion_param">Parametres Connexion</string>
    <string name="savesettings">Parametres sauvegardés</string>
    <string name="security">Sécurité</string>
    <string name="passincorrect">Mot de passe incorrecte</string>
    <string name="passwordactiv">Activation du mot de passe</string>
    <string name="passworde">Mot de passe</string>
    <string name="passwordmodifier">Mot de passe modifié</string>
    <string name="passwordact">Mot de passe actuel</string>
    <string name="actif">Activé</string>
    <string name="desactif">Desactivé</string>
    <string name="passsum">Mot de passe pour securisé les parties resevées aux administrateurs </string>
    <string name="valider">Valider</string>
    <string name="action_download">Charger</string>
    <string name="loding">Chargement en cours</string>
    <string name="wait">SVP veuillez patienter...</string>
    <string name="wait1">SVP veuillez patienter cela peut prendre quelques minutes...</string>
    <string name="solde1">"Solde : "</string>
    <string name="sexe">Sexe :</string>
    <string name="sms">SMS</string>
    <string name="internet">INTERNET</string>
    <string name="mise">Mise :</string>
    <string name="echecinfo">Echec de recuperation d\'info</string>
    <string name="inforecup">Information recuperée</string>
    <string name="produit">Produit</string>
    <string name="montanterror">Montant incorrect</string>
    <string name="versmterror">Retrait ou Dépot ?</string>
    <string name="anyresult">Aucun resultat</string>
    <string name="send_loding">Chargement en cours</string>
    <string name="tout">Toutes</string>
    <string name="rt">Retrait</string>
    <string name="vse">Dépot</string>
    <string name="datechoice">Choisir la date</string>
    <string name="btn_valid">Valider</string>
    <string name="date">Recherche de date</string>
    <string name="mteincorrect">Montant incorrect</string>
    <string name="typeComunication">Mode de communication</string>
    <string name="transactionsuccess">Transaction réussie</string>
    <string name="nopiece">No Pièces : </string>
    <string name="numcptincorect">Veuillez saisir le numero de compte</string>
    <string name="echecloading">Echec de chargement de l\'image</string>
    <string name="fermer">Fermer</string>
    <string name="numerocarnet">Numero de carnet</string>
    <string name="numerocpt">Numero de compte</string>
    <string name="mtnmultiple">Le montant doit etre le multiple de la mise</string>
    <string name="echec1">Echec de génération de pièce</string>
    <string name="echec2">Echec d\'ecriture BaseDistanteClient</string>
    <string name="echec2p">Echec d\'ecriture sur le compte client</string>
    <string name="echec3">Echec d\'ecriture Base Locale</string>
    <string name="echec4">Echec d\'ecriture Base Direction</string>
    <string name="echec">Echec</string>
    <string name="opsuccess">Transaction reussie</string>
    <string name="echec6">Echec de connexion à la base de donnée</string>
    <string name="msgsend">Message envoyé</string>
    <string name="numgsm">Numero GSM</string>
    <string name="msgsentt">Requete envoyée. Veuillez patienter la reponse du serveur</string>
    <string name="msgsent">Requete envoyée</string>
    <string name="ipserver">IP</string>
    <string name="ipserversumary">Ip du serveur</string>
    <string name="title_activity_membre_form">Adhesion</string>
    <string name="title_activity_liste_membre">Liste des Membres</string>
    <string name="title_activity_zone">Zone</string>
    <string name="title_activity_categorie">Categorie</string>
    <string name="title_activity_profession">Profession</string>
    <string name="title_activity_nationalite">Nationalite</string>
    <string name="adhesion">Adhésion</string>
    <string name="menu_search">Recheche</string>
    <string name="dateadesion">Date d\'adhesion</string>
    <string name="prenom">Prénom</string>
    <string name="masculin">M</string>
    <string name="feminin">F</string>
    <string name="pm">PM</string>
    <string name="tel">Téléphone</string>
    <string name="cat">Catégorie</string>
    <string name="prof">Profession</string>
    <string name="nat">Nationalité</string>
    <string name="zone">Zone</string>
    <string name="adresse">Adresse</string>
    <string name="adressesociete">Adresse de la société</string>
    <string name="mtn">Montant</string>
    <string name="save">Enrégistrer</string>
    <string name="action_liste_adhesion_nvel">Nouvelles adhésions</string>
    <string name="action_liste_adhesion_annule">Adhesions annulées</string>
    <string name="action_liste_membre">Liste des membres</string>
    <string name="loadsuccess">Chargement reussi</string>
    <string name="mtesaisi">Mte d\'adhésion superieur au montant saisi</string>
    <string name="sexeincorect">Sexe ?</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="adhesionsuccess">Adhésion réussie</string>
    <string name="baseerror">Echec de connexion à la base</string>
    <string name="pieceerror">Echec génération de pièce</string>
    <string name="sending">Envoie en cours</string>
    <string name="nummembre">"Numero membre: "</string>
    <string name="conneter">Se connecter</string>
    <string name="utilcaisse">Utilitaire de caisse</string>
    <string name="version">Caisse Mobile V1.0</string>
    <string name="journal">Journal</string>
    <string name="carte">Ma carte</string>
    <string name="repére">Repére</string>
    <string name="licence">Licence</string>
    <string name="confid">Confidentialité</string>
    <string name="loginoupass">Login ou mot de passe incorrect</string>
    <string name="opengps">Activer le GPS</string>
    <string name="gpsmsg">Veuillez allumer le gps</string>
    <string name="wrn">Avertissement</string>
    <string name="wrnmsg">Vous ne posseder pas d\'application pour terminer cette action</string>
    <string name="norognapp">Aucune app pour rogner</string>
    <string name="gallery">Gallerie</string>
    <string name="delete">Supprimer</string>
    <string name="camera">Camera</string>
    <string name="addfoto">Ajouter une photo</string>
    <string name="membre">Membre</string>
    <string name="membreoff">DISTANT</string>
    <string name="membreon">LOCAL</string>
    <string name="chargement">Chargement</string>
    <string name="guichet">Guichet :</string>
    <string name="preference">Preferences</string>
    <string name="gps">GPS</string>
    <string name="transfert">Synchronisation</string>
    <string name="title_activity_compte">Compte</string>
    <string name="trsuccess">Synchronisation réussi</string>
    <string name="solderror">Solde nulle</string>
    <string name="miseerror">Mise incorrecte</string>
    <string name="numeroerror">Compte incorrect</string>
    <string name="carneterror">Carnet incorrecte</string>
    <string name="nocredit">No crédit :</string>
    <string name="mtnpre">Montant du prét</string>
    <string name="mensualite">Mensualité</string>
    <string name="encours">Capital rest.</string>
    <string name="datedeblocage">Date déblocage</string>
    <string name="produitt">Produit</string>
    <string name="rembr">Remboursement</string>
    <string name="title_activity_credit">Credit</string>
    <string name="nocarnet">Numero carnet</string>
    <string name="crediterror">Credit incorect</string>
    <string name="rembrerror">Remboursement incorrect</string>
    <string name="rembrincorect">Remboursement inferieur à la mensualité</string>
    <string name="imprimer">Imprimer</string>
    <string name="action">Action</string>
    <string name="soldedispo">Solde disponible : </string>
    <string name="depo">Dépot</string>
    <string name="rembour">Remb</string>
    <string name="mtnn">Montant</string>
    <string name="nb">Nbre</string>
    <string name="op">Opération</string>
    <string name="billetage">Billetage</string>
    <string name="datenaiss">Date de naissance</string>
    <string name="posteoccupe">Poste occupé</string>
    <string name="activite">Activité</string>
    <string name="agencemulti">Agence multiple</string>
    <string name="agencemultioff">Agence unique</string>
    <string name="agencemultion">Agence multiple</string>
    <string name="menu_changepass">Changer le mot de passe</string>
    <string name="quiter">fermer</string>
    <string name="confirmed">Confirmation</string>
    <string name="denmande_pin">Demande de pin</string>
    <string name="pinoff">Demande de pin : Desacitvé</string>
    <string name="pinon">Demande de pin : Activé</string>
</resources>